--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "@ant-design/colors": "^7.1.0",
     "color": "^4.2.3",
     "fs-extra": "^11.2.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^3.8.0",
+    "eslint": "^9.13.0"
   }
 }
